<resources>
    <string name="app_name">DailyPrj</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operant_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
    <string name="say_hello">Say hello</string>


    <string name="percentframelayout">PercentFrameLayout</string>
    <string name="percentlayout_use">PercentLayout USE</string>
    <string name="layout_widthpercent_layout_heightpercent">可以使用的属性：
        layout_widthPercent layout_heightPercent
        layout_marginPercent layout_marginLeftPercent
        layout_marginTopPercent layout_marginRightPercent
        layout_marginBottomPercent layout_marginStartPercent
        layout_marginEndPercent layout_aspectRatio</string>
    <string name="txt_data_binding">将build.gradle元素添加到app模块中的build.gradle文件中，
        "\n"如以下示例所示："\n"
                        android { ... dataBinding { enabled = true } } </string>
    <string name="recyclerview_case">RecyclerView case</string>
    <string name="textviewInfo">RecyclerView的使用,LinearLayoutManager/GridLayoutManager(网格)/StaggeredGridLayoutManager(瀑布)</string>
    <string name="data_binding_2">Data Binding 2</string>
    <string name="data_binding_case">Data Binding Case</string>
    <string name="seacher_products">Seacher Products...</string>
    <string name="loading_products">Loading products...</string>
    <string name="cd_products_list">Products list</string>
    <string name="btn_start_baidumap">启动百度地图导航</string>
    <string name="create_db">create db</string>
    <string name="btn_room_insert_string">插入数据</string>
    <string name="btn_room_update_string">更新数据</string>
    <string name="viewmodel">ViewModel</string>
</resources>
