<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="DrawableLayout"
            android:text="DrawableLayout USE" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="percentLayout"
            android:text="@string/percentlayout_use" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="percentFrameLayout"
        android:text="@string/percentframelayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

    <Button
        android:id="@+id/btn_databind_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:onClick="dataBindingClick"
        android:text="Data Binding "
        app:layout_constraintLeft_toRightOf="@+id/btn_percent"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

    <Button
        android:id="@+id/btn_recyclerview_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/recyclerview_case"
        android:onClick="startRecyclerView"
        app:layout_constraintLeft_toRightOf="@+id/btn_databind_start"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

</androidx.constraintlayout.widget.ConstraintLayout>